--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/pki
+spring.datasource.username=postgres
+spring.datasource.password=1111
 server.port = 8081
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql = true
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
