chore:modify gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,12 @@ local.properties
 
 # STS (Spring Tool Suite)
 .springBeans
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.sts4-cache
 
 # Code Recommenders
 .recommenders/
