--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.datasource.username=postgres
 spring.datasource.password=1111
 server.port = 8081
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.show-sql = true
 
 spring.jpa.properties.hibernate.format_sql=true
