--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -1,11 +1,15 @@
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/pki
 spring.datasource.username=postgres
 spring.datasource.password=1111
-server.port = 8081
 
 spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql = true
 
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=always
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+server.port = 8081
