--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=1111
 
 spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql = true
 
 spring.jpa.properties.hibernate.format_sql=true
