--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=always
 
 server.port = 8081
+spring.keystore.password = K69m763sm
