fix:save certificate in key store

--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.datasource.initialization-mode=always
 server.port = 8081
 
 spring.keystore.password = K69m763sm
-spring.rootca.path = 'keystore/root_ca.jks'
-spring.ca.path = 'keystore/ca.jks'
-spring.end.path = 'keystore/end_entity.jks'
+spring.rootca.path = keystore/root_ca.jks
+spring.ca.path = keystore/ca.jks
+spring.end.path = keystore/end_entity.jks
