fix:save self signed certificate

--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pki
 spring.datasource.username=postgres
 spring.datasource.password=1111
 
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 spring.jpa.show-sql = true
