--- a/pki/.gitignore
+++ b/pki/.gitignore
@@ -113,6 +113,6 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 .flattened-pom.xml
 
-.jks
+*.jks
 
 # End of https://www.toptal.com/developers/gitignore/api/java,maven,eclipse
