feature: account activation

--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.keystore.password = K69m763sm
 spring.rootca.path = ./keystore/root_ca.jks
 spring.ca.path = ./keystore/ca.jks
 spring.end.path = ./keystore/end_entity.jks
+
+#Mail configuration  student123ftn@gmail.com  student_123
+spring.mail.host = smtp.gmail.com
+spring.mail.username = isa.user.test@gmail.com
+spring.mail.password = isauser55
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
