--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -12,7 +12,12 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=always
 
-server.port = 8081
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store: src/main/resources/bootsecurity.p12
+server.ssl.key-store-password: bootsecurity
+server.ssl.keyStoreType: PKCS12
+server.ssl.keyAlias: bootsecurity
 
 spring.keystore.password = K69m763sm
 spring.rootca.path = ./keystore/root_ca.jks
