refactor: new ssl certificate

--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -13,11 +13,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.initialization-mode=always
 
 server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store: src/main/resources/bootsecurity.p12
-server.ssl.key-store-password: bootsecurity
-server.ssl.keyStoreType: PKCS12
-server.ssl.keyAlias: bootsecurity
+
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=src/main/resources/keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+
+security.require-ssl=true
 
 spring.keystore.password = K69m763sm
 spring.rootca.path = ./keystore/root_ca.jks
