refactor: refactor ssl certificate in https

--- a/pki/src/main/resources/application.properties
+++ b/pki/src/main/resources/application.properties
@@ -15,9 +15,11 @@ spring.datasource.initialization-mode=always
 server.port=8443
 
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=src/main/resources/keystore.p12
+server.ssl.key-store=src/main/resources/ssl-cert.p12
 server.ssl.key-store-password=password
-server.ssl.key-alias=tomcat
+server.ssl.key-alias=spring-boot
+server.ssl.key-store-provider=SUN
+server.ssl.key-store-type=JKS
 
 security.require-ssl=true
 
